--- a/public/ai.html
+++ b/public/ai.html
@@ -79,7 +79,29 @@
     
                     <div class="table-row">
                         <div class="col name-col" data-label="Name">
-                            <div class="endpoint-name">Text Generation</div>
+                            <div class="endpoint-name">NIKKA AI</div>
+                            <div class="endpoint-path">/api/v1/ai/generate-text</div>
+                        </div>
+                        <div class="col category-col" data-label="Category">
+                            <span class="category-badge ai">AI</span>
+                        </div>
+                        <div class="col parameter-col" data-label="Parameters">
+                            <span class="parameter-badge">prompt</span>
+                            <span class="parameter-badge">tokens</span>
+                            <span class="parameter-badge">temperature</span>
+                        </div>
+                        <div class="col status-col" data-label="Status">
+                            <span class="status-badge active">Active</span>
+                        </div>
+                        <div class="col action-col" data-label="Action">
+                            <button class="test-btn" data-endpoint="text-generation">
+                                <i class="fas fa-vial"></i> Test
+                            </button>
+                        </div>
+                    </div>
+                    <div class="table-row">
+                        <div class="col name-col" data-label="Name">
+                            <div class="endpoint-name">Gemini</div>
                             <div class="endpoint-path">/api/v1/ai/generate-text</div>
                         </div>
                         <div class="col category-col" data-label="Category">
